[gd_scene load_steps=11 format=3 uid="uid://btbkur778pbwy"]

[ext_resource type="Script" path="res://Scripts/Scenes/play_song_state.gd" id="1_rvoja"]
[ext_resource type="PackedScene" uid="uid://byb7jid55qn1n" path="res://Nodes/Global/conductor.tscn" id="2_57ly5"]
[ext_resource type="PackedScene" uid="uid://cfxo2wixq1d5j" path="res://Nodes/GameAssets/Gameplay/player.tscn" id="2_qsmea"]
[ext_resource type="PackedScene" uid="uid://dqp0tei13fhqm" path="res://Nodes/GameAssets/Gameplay/stage.tscn" id="3_q43hg"]
[ext_resource type="PackedScene" uid="uid://5f1c7amy88s7" path="res://Nodes/GameAssets/Gameplay/NoteSystem/note_strum.tscn" id="4_5yswb"]
[ext_resource type="PackedScene" uid="uid://bqwt4i1tys03u" path="res://Nodes/Global/song.tscn" id="4_6ojtx"]
[ext_resource type="FontFile" uid="uid://d4kb6nf34gjix" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="5_ag0vi"]
[ext_resource type="PackedScene" uid="uid://dubm3sqga7eku" path="res://Nodes/GameAssets/Menu/pauseMenu.tscn" id="6_66vma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v232"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulyle"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PlayState" type="Node2D"]
script = ExtResource("1_rvoja")
metadata/_edit_horizontal_guides_ = []

[node name="stage" parent="." instance=ExtResource("3_q43hg")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="NoteGrp" type="Node2D" parent="."]

[node name="RenderedNotes" type="Node2D" parent="NoteGrp"]

[node name="NoteStrum" parent="NoteGrp" groups=["noteStrum"] instance=ExtResource("4_5yswb")]
position = Vector2(357, 457)

[node name="Placeholder Grp" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="Placeholder Grp"]
texture_filter = 1
layout_mode = 0
offset_left = 269.0
offset_top = 323.0
offset_right = 449.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("5_ag0vi")
horizontal_alignment = 1

[node name="Timing" type="Label" parent="Placeholder Grp/Score"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -33.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_ag0vi")
horizontal_alignment = 1

[node name="SongStats" type="Label" parent="Placeholder Grp"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 452.0
offset_top = 56.11
offset_right = 812.0
offset_bottom = 89.1101
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ag0vi")
text = "Accuracy: 0% | Misses: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Placeholder Grp"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 132.0
offset_top = 22.92
offset_right = 1132.0
offset_bottom = 50.92
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_1v232")
theme_override_styles/fill = SubResource("StyleBoxFlat_ulyle")
step = 0.001
show_percentage = false

[node name="Label" type="Label" parent="Placeholder Grp/ProgressBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -14.0
offset_right = 50.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_ag0vi")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player" parent="." instance=ExtResource("2_qsmea")]
position = Vector2(195, 630)
fastFallMultiplier = 4.5

[node name="WinScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Bg" type="ColorRect" parent="WinScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RankText" type="Label" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -183.765
offset_right = 110.0
offset_bottom = -157.765
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ag0vi")
theme_override_font_sizes/font_size = 22
text = "Your Rank:"

[node name="RankValue" type="Label" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -82.7
offset_right = 189.0
offset_bottom = -37.7
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ag0vi")
theme_override_font_sizes/font_size = 42
text = "RANK (FC)"
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="pauseMenu" parent="CanvasLayer" instance=ExtResource("6_66vma")]

[node name="Conductor" parent="." instance=ExtResource("2_57ly5")]

[node name="Song" parent="." instance=ExtResource("4_6ojtx")]

[connection signal="hit" from="player" to="." method="_on_player_hit"]
